--- a/Pages/BarcodeReader.razor
+++ b/Pages/BarcodeReader.razor
@@ -1,17 +1,33 @@
 ﻿@page "/barcodereader"
 @inject IJSRuntime JSRuntime
 
-<button class="btn btn-primary" @onclick="ReadBarcodes">Read Barcodes from Files</button>
-<button class="btn btn-primary" @onclick="LiveScan">Live Scan</button>
-<p style="color:green;font-style:italic">@result</p>
+@if (initialized == false)
+{
+    <p>Initializing...</p>
+}
+else
+{
+    <button class="btn btn-primary" @onclick="ReadBarcodes">Read Barcodes from Files</button>
+    <button class="btn btn-primary" @onclick="LiveScan">Live Scan</button>
+    <p style="color:green;font-style:italic">@result</p>
+}
 
-@code {
-    private static String result = "No Barcode Found";
+
+
+@code { 
+    String result = "";
+    Boolean initialized = false;
 
     // https://stackoverflow.com/questions/59084133/calling-an-instance-method-in-a-razor-page-from-javascript
     protected override void OnInitialized()
     {
-        JSRuntime.InvokeVoidAsync("jsFunctions.init", DotNetObjectReference.Create(this));
+        Init();
+    }
+
+    public async void Init()
+    {
+        initialized = await JSRuntime.InvokeAsync<Boolean>("jsFunctions.init", DotNetObjectReference.Create(this));
+        StateHasChanged();
     }
 
     public async Task ReadBarcodes()
@@ -30,6 +46,7 @@
     public void ReturnBarcodeResultsAsync(String text)
     {
         result = text;
-        this.StateHasChanged();
+        StateHasChanged();
     }
+
 }
