Updated Dynamsoft JavaScript Barcode SDK to v9.6.11

--- a/Pages/Reader.razor.css
+++ b/Pages/Reader.razor.css
@@ -6,8 +6,17 @@
 #image {
     position: relative;
     width: 100%;
-    height: 100%; 
-    display: none;
+    height: 100%;
+    display: none
+}
+
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .p-result {
