--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -5,9 +5,13 @@
         <NavMenu />
     </div>
 
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+	<main>
+		<div class="top-row px-4">
+			<a href="https://www.dynamsoft.com/barcode-reader/overview/" target="_blank">About Dynamsoft Barcode Reader</a>
+		</div>
+
+		<article class="content px-4">
+			@Body
+		</article>
+	</main>
 </div>
