--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,13 +8,23 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>    
-    </nav>
+	<nav class="flex-column">
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+				<span class="oi oi-home" aria-hidden="true"></span> Home
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="barcodereader">
+				<span class="oi oi-file" aria-hidden="true"></span> Barcode Reader
+			</NavLink>
+		</div>
+		<div class="nav-item px-3">
+			<NavLink class="nav-link" href="barcodescanner">
+				<span class="oi oi-camera-slr" aria-hidden="true"></span> Barcode Scanner
+			</NavLink>
+		</div>
+	</nav>
 </div>
 
 @code {
