--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -16,12 +16,22 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="barcodereader">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Barcode Reader
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Barcode Reader
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="barcodescanner">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Barcode Scanner
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="documentviewer">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Document Viewer
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="documentscanner">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Document Scanner
             </NavLink>
         </div>
     </nav>
