--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -34,6 +34,16 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Document Scanner
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mrzreader">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MRZ Reader
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="mrzscanner">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MRZ Scanner
+            </NavLink>
+        </div>
     </nav>
 </div>
 
