--- a/Pages/BarcodeReader.razor.css
+++ b/Pages/BarcodeReader.razor.css
@@ -1,13 +1,17 @@
 #imageview {
     position: relative;
-    width: 800px;
+    max-width: 720px;
+    max-height: 720px;
+    width: 720px;
+    height: 720px;
+    background-color: #eaeaea;
 }
 
 #image {
     position: relative;
     width: 100%;
     height: 100%;
-    display: none
+    object-fit: contain
 }
 
 #overlay {
