--- a/Pages/BarcodeScanner.razor.css
+++ b/Pages/BarcodeScanner.razor.css
@@ -1,7 +1,10 @@
 #videoview {
     position: relative;
-    width: 100%;
-    height: 100vh;
+    max-width: 720px;
+    max-height: 720px;
+    width: 720px;
+    height: 720px;
+    background-color: #eaeaea;
 }
 
 #videoContainer {
