--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> MRZ Scanner
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="webtwain">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Web TWAIN
+            </NavLink>
+        </div>
     </nav>
 </div>
 
